codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_cwd_change_refreshes_agents.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd to a directory with different AGENTS.md and refreshes the model-visible instructions.\",\n&[(\"First Request (agents_one)\", &requests[0]),\n(\"Second Request (agents_two cwd)\", &requests[1]),])"
---
Scenario: Second turn changes cwd to a directory with different AGENTS.md and refreshes the model-visible instructions.

## Window 1
-- request 1 (turn; First Request (agents_one)) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[2]:
    [01] Skills: List once at session start; read always-applicable and task-relevant skills before work
    [02] <PERMISSIONS_INSTRUCTIONS>
02:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT>
03:message/user:
    first turn in agents_one
-- request 2 (turn; Second Request (agents_two cwd)) --
04:message/assistant:
    turn one complete
05:message/user[2]:
    [01] <AGENTS_MD>
    [02] <ENVIRONMENT_CONTEXT>
06:message/user:
    second turn in agents_two
