codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_turn_overrides.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd and approval policy while keeping model constant.\",\n&[(\"First Request (Baseline)\", &requests[0]),\n(\"Second Request (Turn Overrides)\", &requests[1]),])"
---
Scenario: Second turn changes cwd and approval policy while keeping model constant.

## Window 1
-- request 1 (turn; First Request (Baseline)) --
00:message/developer:
    <MODEL_INSTRUCTIONS>
01:message/developer[2]:
    [01] Skills: List once at session start; read always-applicable and task-relevant skills before work
    [02] <PERMISSIONS_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    first turn
-- request 2 (turn; Second Request (Turn Overrides)) --
04:message/assistant:
    turn one complete
05:message/developer:
    <PERMISSIONS_INSTRUCTIONS>
06:message/user:
    <ENVIRONMENT_CONTEXT>
07:message/user:
    second turn with context updates
